Clase 6/Salida guardada de la terminal
Last login: Mon Jun 17 08:00:27 on console
Grecia48:~ cur01alu48$ cd Documents/
Grecia48:Documents cur01alu48$ ls
errores.py		erroresejercicio2.py
Grecia48:Documents cur01alu48$ python3 erroresejercicio2.py 
2.0
Grecia48:Documents cur01alu48$ python3 erroresejercicio2.py 
La division entre cero no es posible
Grecia48:Documents cur01alu48$ python3 calculadora3.py 
  File "calculadora3.py", line 3
    while Calculadora:
    ^
IndentationError: unexpected indent
Grecia48:Documents cur01alu48$ python3 calculadora3.py 
  File "calculadora3.py", line 42
    else:
       ^
SyntaxError: invalid syntax
Grecia48:Documents cur01alu48$ python3 calculadora3.py 
  File "calculadora3.py", line 45
    except ZeroDivisionError:
         ^
SyntaxError: invalid syntax
Grecia48:Documents cur01alu48$ python3 calculadora3.py 
Calculadora
Menu
Selecciona una opción
1. Suma
2. Resta
3. Multiplicación
4.División
5. Salir
Traceback (most recent call last):
  File "calculadora3.py", line 16, in <module>
    eleccion = int(int("opción: "))
ValueError: invalid literal for int() with base 10: 'opción: '
Grecia48:Documents cur01alu48$ python3 calculadora3.py 
Calculadora
Menu
Selecciona una opción
1. Suma
2. Resta
3. Multiplicación
4.División
5. Salir
opción: 2
Ingresa un número: 2
Ingresa otro número: '
Traceback (most recent call last):
  File "calculadora3.py", line 25, in <module>
    num2 = int(input("Ingresa otro número: "))
ValueError: invalid literal for int() with base 10: "'"
Grecia48:Documents cur01alu48$ python3 calculadora3.py 
Calculadora
Menu
Selecciona una opción
1. Suma
2. Resta
3. Multiplicación
4.División
5. Salir
opción: 2
Ingresa un número: 2
Ingresa otro número: 0
La Resta de los dos números es:  2
Calculadora
Menu
Selecciona una opción
1. Suma
2. Resta
3. Multiplicación
4.División
5. Salir
opción: 3
Ingresa un número: 2
Ingresa otro número: 0
La División de los dos números es:  0
Calculadora
Menu
Selecciona una opción
1. Suma
2. Resta
3. Multiplicación
4.División
5. Salir
opción: 4
Ingresa un número: 3
Ingresa otro número: 0
La division entre cero no es posible
Calculadora
Menu
Selecciona una opción
1. Suma
2. Resta
3. Multiplicación
4.División
5. Salir
opción: 5
Digite otra opción: 
Calculadora
Menu
Selecciona una opción
1. Suma
2. Resta
3. Multiplicación
4.División
5. Salir
opción: 5
Digite otra opción: 
Calculadora
Menu
Selecciona una opción
1. Suma
2. Resta
3. Multiplicación
4.División
5. Salir
opción: 5
Digite otra opción: 
Calculadora
Menu
Selecciona una opción
1. Suma
2. Resta
3. Multiplicación
4.División
5. Salir
opción: 5
Digite otra opción: 
Calculadora
Menu
Selecciona una opción
1. Suma
2. Resta
3. Multiplicación
4.División
5. Salir
opción: 5
Digite otra opción: 
Calculadora
Menu
Selecciona una opción
1. Suma
2. Resta
3. Multiplicación
4.División
5. Salir
opción: 5
Digite otra opción: 
Calculadora
Menu
Selecciona una opción
1. Suma
2. Resta
3. Multiplicación
4.División
5. Salir
opción: ^Z
[1]+  Stopped                 python3 calculadora3.py
Grecia48:Documents cur01alu48$ python3 calculadora3.py 
  File "calculadora3.py", line 48
    else:
       ^
SyntaxError: invalid syntax
Grecia48:Documents cur01alu48$ python3 calculadora3.py 
  File "calculadora3.py", line 48
    else:
       ^
SyntaxError: invalid syntax
Grecia48:Documents cur01alu48$ python3 calculadora3.py 
Calculadora
Menu
Selecciona una opción
1. Suma
2. Resta
3. Multiplicación
4.División
5. Salir
opción: 4
Ingresa un número: 4
Ingresa otro número: '
Traceback (most recent call last):
  File "calculadora3.py", line 35, in <module>
    num2 = int(input("Ingresa otro número: "))
ValueError: invalid literal for int() with base 10: "'"
Grecia48:Documents cur01alu48$ python3 calculadora3.py 
Calculadora
Menu
Selecciona una opción
1. Suma
2. Resta
3. Multiplicación
4.División
5. Salir
opción: 4
Ingresa un número: 5
Ingresa otro número: 0
La division entre cero no es posible
Calculadora
Menu
Selecciona una opción
1. Suma
2. Resta
3. Multiplicación
4.División
5. Salir
opción: ^CTraceback (most recent call last):
  File "calculadora3.py", line 16, in <module>
    eleccion = int(input("opción: "))
KeyboardInterrupt
Grecia48:Documents cur01alu48$ python3 calculadora3.py 
Calculadora
Menu
Selecciona una opción
1. Suma
2. Resta
3. Multiplicación
4.División
5. Salir
opción: 4
Ingresa un número: 5
Ingresa otro número: 0
La division entre cero no es posible
Deseas realizar otra operación?si
Calculadora
Menu
Selecciona una opción
1. Suma
2. Resta
3. Multiplicación
4.División
5. Salir
opción: 3
Ingresa un número: 3
Ingresa otro número: 4
La Multiplicación de los dos números es:  12
Digite otra opción: 
Calculadora
Menu
Selecciona una opción
1. Suma
2. Resta
3. Multiplicación
4.División
5. Salir
opción: 5
Hasta luego
Grecia48:Documents cur01alu48$ python3 erroresejercicio4.py 
Grecia48:Documents cur01alu48$ python3 erroresejercicio4.py 
Grecia48:Documents cur01alu48$ python3 erroresejercicio4.py 
<class 'ZeroDivisionError'>
Grecia48:Documents cur01alu48$ python3 erroresejercicio4.py 
<class 'ZeroDivisionError'>
('division by zero',)
division by zero
Grecia48:Documents cur01alu48$ python3 erroresejercicio4.py 
<class 'ZeroDivisionError'>
('division by zero',)
division by zero
Grecia48:Documents cur01alu48$ python3 raise.py 
Ingresa cual es el mejor curso de proteco: Python AM
Traceback (most recent call last):
  File "raise.py", line 12, in <module>
    raise Exception
Exception
Grecia48:Documents cur01alu48$ python3 raise.py 
Ingresa cual es el mejor curso de proteco: Python AM sala A
Felicidades python AM es el mejor curso.
Grecia48:Documents cur01alu48$ python3 raise.py 
Ingresa cual es el mejor curso de proteco: python am sala a 
Traceback (most recent call last):
  File "raise.py", line 14, in <module>
    raise Exception
Exception
Grecia48:Documents cur01alu48$ python3 raise.py 
Ingresa cual es el mejor curso de proteco: Python am sala a
Traceback (most recent call last):
  File "raise.py", line 14, in <module>
    raise Exception
Exception
Grecia48:Documents cur01alu48$ python3 raise.py 
  File "raise.py", line 12
    mejorCurso = input("Ingresa cual es el mejor curso de proteco: ")
             ^
IndentationError: expected an indented block
Grecia48:Documents cur01alu48$ python3 raise.py 
Ingresa cual es el mejor curso de proteco: python am sala a
Traceback (most recent call last):
  File "raise.py", line 17, in <module>
    raise ValueError
ValueError
Grecia48:Documents cur01alu48$ python3 raise.py 
Ingresa cual es el mejor curso de proteco: PYTHON AM SALA A
Traceback (most recent call last):
  File "raise.py", line 17, in <module>
    raise ValueError
ValueError
Grecia48:Documents cur01alu48$ python3 raise.py 
Ingresa cual es el mejor curso de proteco: PYTHON am sala a
Felicidades python AM es el mejor curso.
Grecia48:Documents cur01alu48$ clear

Grecia48:Documents cur01alu48$ python3 MiDeclaracionDeExcepciones.py 
  File "MiDeclaracionDeExcepciones.py", line 4
    def __init__(self, mensaje)
                              ^
SyntaxError: invalid syntax
Grecia48:Documents cur01alu48$ python3 MiDeclaracionDeExcepciones.py 
  File "MiDeclaracionDeExcepciones.py", line 4
    def __init__(self, mensaje)
                              ^
SyntaxError: invalid syntax
Grecia48:Documents cur01alu48$ python3 MiDeclaracionDeExcepciones.py 
  File "MiDeclaracionDeExcepciones.py", line 5
    self.mensaje = mensaje
       ^
IndentationError: expected an indented block
Grecia48:Documents cur01alu48$ python3 MiDeclaracionDeExcepciones.py 
Traceback (most recent call last):
  File "MiDeclaracionDeExcepciones.py", line 11, in <module>
    unaFuncion()
  File "MiDeclaracionDeExcepciones.py", line 9, in unaFuncion
    raise miExcepcion("Mi excepcion ha sido invocada")
__main__.miExcepcion: Mi excepcion ha sido invocada
Grecia48:Documents cur01alu48$ 

